PokeTradR/force-app/main/default/objects/Trade__c/fields/Asking_For__c.field-meta.xml
<CustomField>
    <fullName>Asking_For__c</fullName>
    <description>Can ask for Money or Pokemon</description>
    <label>Asking For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pokémon</fullName>
            </value>
            <value>
                <fullName>Money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>