PokeTradR/force-app/main/default/objects/Trade__c/fields/Auto__c.field-meta.xml
<CustomField>
    <fullName>Auto__c</fullName>
    <displayFormat>P-{000}</displayFormat>
    <label>Auto</label>
    <type>AutoNumber</type>
</CustomField>