PokeTradR/force-app/main/default/objects/Trade__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Level of Pokémon</description>
    <label>Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>