PokeTradR/force-app/main/default/objects/Trade__c/fields/Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Pokemon__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pokemon</label>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Trades (Pokemon)</relationshipLabel>
    <relationshipName>Trades</relationshipName>
    <type>Lookup</type>
</CustomField>