PokeTradR/force-app/main/default/objects/Trade__c/fields/Pokemon_Name__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_Name__c</fullName>
    <label>Pokemon Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pokemon</valueSetName>
    </valueSet>
</CustomField>