PokeTradR/force-app/main/default/objects/Trade__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>Trainer__c</referenceTo>
    <relationshipLabel>Trades (Recipient)</relationshipLabel>
    <relationshipName>Trades</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>