PokeTradR/force-app/main/default/objects/Trade__c/fields/Requested_Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Requested_Pokemon__c</fullName>
    <description>Requested Pokémon user is looking for</description>
    <label>Requested Pokemon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pokemon</valueSetName>
    </valueSet>
</CustomField>