PokeTradR/force-app/main/default/objects/Trade__c/fields/Requested_Price__c.field-meta.xml
<CustomField>
    <fullName>Requested_Price__c</fullName>
    <description>How much money user is asking</description>
    <label>Requested Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>