PokeTradR/force-app/main/default/objects/Trade__c/fields/Requested_Type__c.field-meta.xml
<CustomField>
    <fullName>Requested_Type__c</fullName>
    <description>The requested type of the Pokemon</description>
    <label>Requested Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type1</valueSetName>
    </valueSet>
</CustomField>