PokeTradR/force-app/main/default/objects/Trade__c/fields/Shiny__c.field-meta.xml
<CustomField>
    <fullName>Shiny__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Pokémon is shiny or not</description>
    <label>Shiny</label>
    <type>Checkbox</type>
</CustomField>