PokeTradR/force-app/main/default/objects/Trade__c/fields/Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Name__c</fullName>
    <label>Trainer Name</label>
    <referenceTo>Trainer__c</referenceTo>
    <relationshipLabel>Trades</relationshipLabel>
    <relationshipName>Trades1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>