PokeTradR/force-app/main/default/objects/Trade__c/fields/Type2__c.field-meta.xml
<CustomField>
    <fullName>Type2__c</fullName>
    <description>Secondary type</description>
    <label>Type2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type2</valueSetName>
    </valueSet>
</CustomField>